# roborobo3

./: .gitignore  makefile-manager  roborobo_runSeq
config/: collect2.properties  increment.properties  increment_with_positions.properties  odneat_test.properties  original.properties  testC2.properties
learnFunction/: CMakeLists.txt  auxlearnfunction.cpp  auxlearnfunction.h  cmdDatasets.sh  compileDataset.sh  generalReasoning.txt  generateDataset  generateDataset.cpp  gnuplotFolder.sh  heatmap.py  heatmapsRun.sh  learnFunction  learnFunction.cpp  learnFunction.h  notesQuestionsExperimentsFonct1D.txt  plotFitnessInMultiExp.py  plot_2_functions.plg  plot_function.plg  plotdataAllPop.gnu  plotdatapoints.gnu  reasoningDiversity.txt  sandbox.py  splotCmds.txt  splotCmdsSed.txt  tmpDataFilesExp.py
learnFunction/NEAT/: Makefile  endRunSeveral.sh  exampleRunSeveral.x  experiments.cpp  experiments.h  gene.cpp  generateParamFiles.sh  genome.cpp  genome.h  neat.cpp  neat.h  neatLearnFunction  neatLearnFunction.cpp  network.cpp  network.h  nnode.cpp  nnode.h  organism.cpp  organism.h  population.cpp  population.h  runSeveral.sh  species.cpp  testByHand.cpp  testDepth.dot
learnFunction/config/: 80P-3thr-Mut.01-.03-.03-.6-Sigma.1-Period25-Inject15-Noload-T2-T1.params  template-params  template-params-multi  test-params
learnFunction/datasets/: o1-template-params.nn  o2-template-params.nn
testTWEANN/: evaluateRandomMultisynapse.cpp  test.cpp
tools/: colorsConfigGenerator.py  createConfigParallel.sh  installRobo3.sh  multirunFitness.py  paramsEcal-launchMultiple.sh  (+7 more)
(+56 files in other folders)
